@@ -133,9 +133,8 @@ int sh_main(int ac, char *av[], Shinit_f userinit)
 	if(sigsetjmp(*((sigjmp_buf*)sh.jmpbuffer),0))
 	{
 		/* begin script execution here */
-		sh_reinit(NULL);
+		sh_reinit();
 	}
-	sh.fn_depth = sh.dot_depth = 0;
 	command = error_info.id;
 	path_pwd();
 	iop = NULL;
